--- a/quebracabeca.html
+++ b/quebracabeca.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Quebra-Cabeça UniRoboZin</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="CSS/quebracabeca.css">
     <link rel="stylesheet" href="CSS/modal.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap">
